--- a/client/src/components/Auth/LogIn/LogIn.css
+++ b/client/src/components/Auth/LogIn/LogIn.css
@@ -43,4 +43,45 @@
   text-align: left;
   color: #79D9FF;
 }
+
+.login-input {
+  background-color: #353333;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+  z-index: 100;
+  color: #fff;
+}
+
+.login-button {
+  border-radius: 20px;
+  border: 1px solid transparent;
+  background-color: #353333;
+  color: #FFFFFF;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  -webkit-transition: -webkit-transform 80ms ease-in;
+  transition: -webkit-transform 80ms ease-in;
+  transition: transform 80ms ease-in;
+  transition: transform 80ms ease-in, -webkit-transform 80ms ease-in;
+  cursor: pointer;
+}
+
+.login-button:hover {
+  border: 1px solid transparent;
+  background-color: #f7b85b;
+}
+
+.login-button:active {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+}
+
+.login-button:focus {
+  outline: none;
+}
 /*# sourceMappingURL=LogIn.css.map */
