--- a/client/src/components/Auth/LogIn/LogIn.scss
+++ b/client/src/components/Auth/LogIn/LogIn.scss
@@ -43,3 +43,41 @@
   color: #79D9FF;
 }
 
+
+.login-input {
+	background-color: rgb(53, 51, 51);
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
+  z-index: 100;
+  color: #fff
+}
+
+.login-button {
+	border-radius: 20px;
+	border: 1px solid transparent;
+	background-color: rgb(53, 51, 51);
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+	cursor: pointer;
+}
+
+.login-button:hover{
+	border: 1px solid transparent;
+	background-color: rgb(247, 184, 91)
+}
+
+
+.login-button:active {
+	transform: scale(0.95);
+}
+
+.login-button:focus {
+	outline: none;
+}
