--- a/client/src/components/Auth/LogIn/LogIn.scss
+++ b/client/src/components/Auth/LogIn/LogIn.scss
@@ -55,7 +55,7 @@
 }
 
 .login-button {
-	border-radius: 20px;
+	// border-radius: 20px;
 	border: 1px solid transparent;
 	background-color: rgb(53, 51, 51);
 	color: #FFFFFF;
@@ -70,7 +70,7 @@
 
 .login-button:hover{
 	border: 1px solid transparent;
-	background-color: rgb(247, 184, 91)
+  background-color: #45758C;
 }
 
 
