--- a/client/src/components/Auth/SignUp/SignUp.css
+++ b/client/src/components/Auth/SignUp/SignUp.css
@@ -55,7 +55,6 @@
 }
 
 .signup-button {
-  /* border-radius: 20px; */
   border: 1px solid transparent;
   background-color: #353333;
   color: #FFFFFF;
@@ -106,6 +105,6 @@
 
 .signup-input-name:nth-child(1) {
   margin-right: .5%;
-  margin-right: 1.925%;
+  margin-right: .95%;
 }
 /*# sourceMappingURL=SignUp.css.map */
