--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -187,6 +187,12 @@
   background-position: 40% -50px;
 }
 
+.menu__slot:hover .reddy {
+  background-image: url('./reddy.png');
+  background-position: 40% -50px;
+  filter: grayscale(100%);
+}
+
 .char {
   height: 100%;
   width: 100%;
