--- a/client/src/components/Collection/YourCards/YourCards.css
+++ b/client/src/components/Collection/YourCards/YourCards.css
@@ -1,4 +1,64 @@
-.test {
-  color: red;
+.yourCards-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  min-height: 100vh;
+}
+
+.card3d {
+  margin: 4px;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-perspective: 600px;
+          perspective: 600px;
+  cursor: pointer;
+}
+
+.card3d:hover {
+  z-index: 10;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.card3d,
+.card3d img {
+  -webkit-transition: all 250ms ease-out;
+  transition: all 250ms ease-out;
+}
+
+.card {
+  margin: 4px;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-perspective: 600px;
+          perspective: 600px;
+  cursor: pointer;
+}
+
+.noImage {
+  background-color: #f4e8d2;
+  width: 12vw;
+  height: 30vh;
+  border-radius: 5px;
+}
+
+.card:hover {
+  z-index: 10;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.card,
+.card .noImage {
+  -webkit-transition: all 250ms ease-out;
+  transition: all 250ms ease-out;
 }
 /*# sourceMappingURL=YourCards.css.map */
