--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -1,3 +1,50 @@
-.test{
-    color: red;
+.yourCards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    min-height: 100vh;
+}
+
+.card3d {
+    margin: 4px;
+    transform: scale(1);
+    perspective: 600px;
+    cursor: pointer;
+}
+
+.card3d:hover {
+    z-index: 10;
+    transform: scale(1.3);
+}
+
+.card3d,
+.card3d img {
+    transition: all 250ms ease-out;
+}
+
+.card {
+    margin: 4px;
+    transform: scale(1);
+    perspective: 600px;
+    cursor: pointer;
+}
+
+.noImage {
+    background-color: rgb(244, 232, 210);
+    width: 12vw;
+    height: 30vh;
+    // width:180px;
+    // height:250px;
+    border-radius: 5px;
+}
+
+.card:hover {
+    z-index: 10;
+    transform: scale(1.3);
+}
+
+.card,
+.card .noImage {
+    transition: all 250ms ease-out;
 }
