removed non functional card manipulation code

--- a/client/src/components/Collection/YourCards/YourCards.css
+++ b/client/src/components/Collection/YourCards/YourCards.css
@@ -44,7 +44,7 @@
 }
 
 .noImage {
-  background-color: #f4e8d2;
+  background-color: #eaddca;
   width: 12vw;
   height: 30vh;
   border-radius: 5px;
