minor styling updates

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -3,6 +3,7 @@
   opacity: 100;
   color: #45758C;
   z-index: 15;
-  margin-left: 85%;
+  margin-left: 83.5%;
+  cursor: default;
 }
 /*# sourceMappingURL=App.css.map */
