--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,4 +1,18 @@
 .test {
   color: aquamarine;
 }
+
+.text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 5px;
+  background-color: aquamarine;
+  color: #fff;
+  height: 38vh;
+}
 /*# sourceMappingURL=Card.css.map */
