--- a/client/src/components/Collection/OpenPacks/OpenPacks.css
+++ b/client/src/components/Collection/OpenPacks/OpenPacks.css
@@ -15,15 +15,27 @@
   background-color: #6d6d6d;
 }
 
-.pack :hover {
-  z-index: 10;
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
+.pack-info-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.pack,
-.card .noImage {
-  -webkit-transition: all 250ms ease-out;
-  transition: all 250ms ease-out;
+.floppy {
+  height: 30vh;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 /*# sourceMappingURL=OpenPacks.css.map */
