--- a/client/src/components/Collection/OpenPacks/OpenPacks.scss
+++ b/client/src/components/Collection/OpenPacks/OpenPacks.scss
@@ -12,18 +12,27 @@
 
 .booster {
     background-color: rgb(109, 109, 109);
-
-
-
-
 }
 
-.pack :hover {
-    z-index: 10;
-    transform: scale(1.3);
+// .pack :hover {
+//     z-index: 10;
+//     transform: scale(1.3);
+// }
+
+// .pack ,
+// .card .noImage {
+//     transition: all 250ms ease-out;
+// }
+
+.pack-info-container{ 
+display: flex;
+flex-direction: column;
+align-content: center;
+justify-content: center;
+align-items: center;
 }
 
-.pack ,
-.card .noImage {
-    transition: all 250ms ease-out;
+.floppy{
+    height: 30vh;
+    filter: grayscale(100%);
 }
