--- a/client/src/components/Collection/OpenPacks/OpenPacks.css
+++ b/client/src/components/Collection/OpenPacks/OpenPacks.css
@@ -1,41 +1,1 @@
-.pack {
-  margin: 4px;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-perspective: 600px;
-          perspective: 600px;
-  cursor: pointer;
-  background-color: #171717;
-  width: 20vw;
-  height: 44vh;
-  border-radius: 5px;
-}
-
-.booster {
-  background-color: #6d6d6d;
-}
-
-.pack-info-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.floppy {
-  height: 30vh;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
-}
-/*# sourceMappingURL=OpenPacks.css.map */
+/* No CSS *//*# sourceMappingURL=OpenPacks.css.map */
