--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
@@ -3,15 +3,35 @@
     transform: scale(1);
     perspective: 600px;
     cursor: pointer;
-    background-color: rgb(23, 23, 23);
+    background-color: rgb(109, 109, 109);
     width: 20vw;
     height: 44vh;
-    border-radius: 5px;
+    border-radius: 10px;
 
 }
 
 .booster {
-    background-color: rgb(109, 109, 109);
+    background-color: rgb(49, 69, 116);
+}
+
+.regular {
+    background-color: rgb(99, 67, 19);
+}
+
+.pro {
+    background-color: rgb(175, 174, 171);
+}
+
+.max {
+    background-color: rgb(214, 172, 110);
+}
+
+.ultra {
+    background-color: rgb(110, 207, 214);
+}
+
+.studio {
+    background-color: rgb(172, 110, 214);
 }
 
 // .pack :hover {
@@ -30,6 +50,7 @@ flex-direction: column;
 align-content: center;
 justify-content: center;
 align-items: center;
+color: #fff
 }
 
 .floppy{
