added hover changes to pack

--- a/client/src/components/Collection/OpenPacks/OpenPacks.scss
+++ b/client/src/components/Collection/OpenPacks/OpenPacks.scss
@@ -2,9 +2,8 @@
     margin-left: 10%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
     flex-wrap: wrap;
-    align-content: center;
+    align-content: space-evenly;
     min-height: 100vh;
     width: 80%;
 }
