--- a/client/src/components/Collection/OpenPacks/OpenPacks.css
+++ b/client/src/components/Collection/OpenPacks/OpenPacks.css
@@ -5,13 +5,10 @@
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  -ms-flex-line-pack: space-evenly;
+      align-content: space-evenly;
   min-height: 100vh;
   width: 80%;
 }
