--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
@@ -11,6 +11,12 @@
   border-radius: 10px;
 }
 
+.pack:hover {
+  z-index: 10;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 .booster {
   background-color: #314574;
 }
