--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
@@ -7,6 +7,15 @@
     width: 18vw;
     height: 43vh;
     border-radius: 10px;
+
+    &:hover{
+        z-index: 10;
+        transform: scale(1.1);
+        // width: 20vw;
+        // height: 45vh;
+    }
+
+    
 }
 
 .booster {
@@ -37,10 +46,6 @@
     background-color: rgb(104, 178, 135);
 }
 
-// .pack :hover {
-//     z-index: 10;
-//     transform: scale(1.3);
-// }
 
 // .pack ,
 // .card .noImage {
