--- a/client/src/components/BuyPacks/BuyPacks.scss
+++ b/client/src/components/BuyPacks/BuyPacks.scss
@@ -1,4 +1,5 @@
 .yourPacks-container {
+    position: absolute;
     margin-left: 10%;
     display: flex;
     justify-content: space-around;
@@ -6,4 +7,43 @@
     align-content: space-evenly;
     min-height: 100vh;
     width: 80%;
+}
+
+
+.back_button {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    position: relative;
+    overflow: hidden;
+    // cursor: pointer;
+    display: flex;
+    flex-direction: column;
+
+
+
+    h3 {
+        text-transform: uppercase;
+        position: relative;
+        text-align: center;
+        color: #45758C;
+        background-color: rgba(45, 51, 61, 0.8);
+        padding: 2% 2%;
+        font-size: 1em;
+        font-weight: 300;
+        z-index: -1;
+        background-image: url('../../img/led-grid.png');
+        background-size: cover;
+        cursor: pointer;
+    }
+
+    >div>h3 {
+        font-size: 2em;
+        font-weight: bold;
+        min-width: 20%;
+        max-width: 20%;
+        text-align: left;
+        color: #79D9FF;
+    }
+
 }
