--- a/client/src/components/Collection/OpenPacks/OpenPacks.scss
+++ b/client/src/components/Collection/OpenPacks/OpenPacks.scss
@@ -5,5 +5,43 @@
     flex-wrap: wrap;
     align-content: space-evenly;
     min-height: 100vh;
-    width: ;
+    width: 50%;
+}
+
+
+.back_button {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    position: relative;
+    overflow: hidden;
+    // cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+
+    h3 {
+        text-transform: uppercase;
+        position: relative;
+        text-align: center;
+        color: #45758C;
+        background-color: rgba(45, 51, 61, 0.8);
+        padding: 2% 2%;
+        font-size: 1em;
+        font-weight: 300;
+        z-index: -1;
+        background-image: url('../../../img/led-grid.png');
+        background-size: cover;
+    }
+
+    >div>h3 {
+        font-size: 2em;
+        font-weight: bold;
+        min-width: 20%;
+        max-width: 20%;
+        text-align: left;
+        color: #79D9FF;
+    }
+    
 }
