--- a/client/src/components/Collection/YourCards/YourCards.css
+++ b/client/src/components/Collection/YourCards/YourCards.css
@@ -5,6 +5,8 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: flex;
+      flex-wrap: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -60,5 +62,46 @@
 .card .noImage {
   -webkit-transition: all 250ms ease-out;
   transition: all 250ms ease-out;
+}
+
+.back_button-yc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  margin-top: -57%;
+}
+
+.back_button-yc h3 {
+  text-transform: uppercase;
+  position: relative;
+  text-align: center;
+  color: #45758C;
+  background-color: rgba(45, 51, 61, 0.8);
+  padding: 2% 2%;
+  font-size: 1em;
+  font-weight: 300;
+  z-index: -1;
+  background-image: url("../../../img/led-grid.png");
+  background-size: cover;
+}
+
+.back_button-yc > div > h3 {
+  font-size: 2em;
+  font-weight: bold;
+  min-width: 20%;
+  max-width: 20%;
+  text-align: left;
+  color: #79D9FF;
 }
 /*# sourceMappingURL=YourCards.css.map */
