--- a/client/src/components/Modals/Modal.css
+++ b/client/src/components/Modals/Modal.css
@@ -6,6 +6,8 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 1000;
+  -webkit-transition: 1s ease;
+  transition: 1s ease;
 }
 
 .modal {
