--- a/client/src/components/Modals/Modal.scss
+++ b/client/src/components/Modals/Modal.scss
@@ -7,6 +7,10 @@
     background-color: rgba(0,0,0,0.7);
     z-index: 1000;
     transition: 1s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal{
@@ -19,3 +23,12 @@
     background-color: white;
  }
  
+
+ .openedCards-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    min-height: 100vh;
+    width: 80%;
+}
