--- a/client/src/components/Modals/Modal.scss
+++ b/client/src/components/Modals/Modal.scss
@@ -4,7 +4,7 @@
     left: 0;
     bottom: 0;
     right:0; 
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.85);
     z-index: 1000;
     transition: 1s ease;
     display: flex;
@@ -30,5 +30,5 @@
     flex-wrap: wrap;
     align-content: space-evenly;
     min-height: 100vh;
-    width: 80%;
+    width: 70%;
 }
