--- a/client/src/components/Collection/OpenPacks/NewCard/NewCard.css
+++ b/client/src/components/Collection/OpenPacks/NewCard/NewCard.css
@@ -30,4 +30,22 @@
           align-items: center;
   color: #fff;
 }
+
+.unopened {
+  background-color: #080808;
+}
+
+.unopened .charCard-info-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #080808;
+}
 /*# sourceMappingURL=NewCard.css.map */
