--- a/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
+++ b/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
@@ -8,6 +8,8 @@
     height: 27vh;
     border-radius: 5px;
 
+
+
     &:hover{
         z-index: 10;
         transform: scale(1.3);
@@ -19,7 +21,21 @@
         flex-direction: column;
         align-items: center;
         color: #fff
-        
+
         }
     
+    
+}
+
+.unopened{
+    background-color: rgb(8, 8, 8);
+
+
+    .charCard-info-container{ 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: rgb(8, 8, 8);
+
+        }
 }
