--- a/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
+++ b/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
@@ -27,6 +27,23 @@
     
 }
 
+.bronze {
+    background-color: #cd7f32;
+}
+
+.silver {
+    background-color: rgb(175, 174, 171);
+}
+
+.gold {
+    background-color: rgb(214, 172, 110);
+}
+
+.holo {
+    background-color: rgb(110, 207, 214);
+}
+
+
 .unopened{
     background-color: rgb(8, 8, 8);
 
