--- a/client/src/components/Collection/YourCards/YourCards.css
+++ b/client/src/components/Collection/YourCards/YourCards.css
@@ -1,67 +1,31 @@
+.displayCards-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .yourCards-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: flex;
-      flex-wrap: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  min-height: 100vh;
-}
-
-.card3d {
-  margin: 4px;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-perspective: 600px;
-          perspective: 600px;
-  cursor: pointer;
-}
-
-.card3d:hover {
-  z-index: 10;
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-}
-
-.card3d,
-.card3d img {
-  -webkit-transition: all 250ms ease-out;
-  transition: all 250ms ease-out;
-}
-
-.card {
-  margin: 4px;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-perspective: 600px;
-          perspective: 600px;
-  cursor: pointer;
-}
-
-.noImage {
-  background-color: #eaddca;
-  width: 12vw;
-  height: 30vh;
-  border-radius: 5px;
-}
-
-.card:hover {
-  z-index: 10;
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-}
-
-.card,
-.card .noImage {
-  -webkit-transition: all 250ms ease-out;
-  transition: all 250ms ease-out;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: space-evenly;
+      align-content: space-evenly;
+  width: 70%;
+  z-index: 100;
 }
 
 .back_button-yc {
@@ -74,17 +38,17 @@
           flex-direction: column;
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
-  position: relative;
+  position: fixed;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  margin-top: -57%;
+  margin-top: -307%;
 }
 
 .back_button-yc h3 {
   text-transform: uppercase;
-  position: relative;
+  position: fixed;
   text-align: center;
   color: #45758C;
   background-color: rgba(45, 51, 61, 0.8);
