--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,4 +1,4 @@
-.charCard {
+.charCard-yc {
   margin: 4px;
   -webkit-transform: scale(1);
           transform: scale(1);
@@ -6,18 +6,23 @@
           perspective: 600px;
   cursor: pointer;
   background-color: #6d6d6d;
-  width: 10.5vw;
+  width: 10.65vw;
   height: 27vh;
   border-radius: 5px;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
 }
 
-.charCard:hover {
+.charCard-yc:hover {
   z-index: 10;
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  border: 1px solid rgba(0, 0, 0, 0.24);
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
 }
 
-.charCard .charCard-info-container {
+.charCard-yc .charCard-info-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
