--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -1,18 +1,22 @@
-.charCard {
+.charCard-yc {
     margin: 4px;
     transform: scale(1);
     perspective: 600px;
     cursor: pointer;
     background-color: rgb(109, 109, 109);
-    width: 10.5vw;
+    width: 10.65vw;
     height: 27vh;
     border-radius: 5px;
+    transition: .5s ease;
+
 
 
 
     &:hover{
         z-index: 10;
-        transform: scale(1.3);
+        transform: scale(1.5);
+        border: 1px solid rgba(0, 0, 0, 0.24);
+        transition: .5s ease;
     }
 
 
