--- a/client/src/components/Auth/LogIn/LogIn.css
+++ b/client/src/components/Auth/LogIn/LogIn.css
@@ -21,6 +21,21 @@
   margin-top: 45vh;
 }
 
+.log-in-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-line-pack: space-evenly;
+      align-content: space-evenly;
+}
+
 .login__slot h3 {
   text-transform: uppercase;
   position: relative;
@@ -68,19 +83,29 @@
   transition: transform 80ms ease-in;
   transition: transform 80ms ease-in, -webkit-transform 80ms ease-in;
   cursor: pointer;
+  width: 30%;
+  -webkit-transition: .25s ease;
+  transition: .25s ease;
 }
 
 .login-button:hover {
   border: 1px solid transparent;
-  background-color: #45758C;
+  color: #79D9FF;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
 }
 
 .login-button:active {
   -webkit-transform: scale(0.95);
           transform: scale(0.95);
+  background-color: #45758C;
 }
 
-.login-button:focus {
-  outline: none;
+.login-forgot {
+  margin-top: 1%;
+  margin-bottom: 2%;
+  margin-left: 1%;
+  color: rgba(255, 255, 255, 0.348);
+  cursor: pointer;
 }
 /*# sourceMappingURL=LogIn.css.map */
