--- a/client/src/components/Auth/SignUp/SignUp.scss
+++ b/client/src/components/Auth/SignUp/SignUp.scss
@@ -55,6 +55,7 @@
 }
 
 .signup-button {
+	// border-radius: 20px;
 	border: 1px solid transparent;
 	background-color: rgb(53, 51, 51);
 	color: #FFFFFF;
@@ -65,20 +66,19 @@
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
 	cursor: pointer;
-}
+  width: 30%;
+  transition: .25s ease;
 
-.signup-button:hover{
+  &:hover{
 	border: 1px solid transparent;
-  background-color: #45758C;
+  color: #79D9FF;
+  transition: .5s ease;
 }
-
-
-.signup-button:active {
+ &:active{
 	transform: scale(0.95);
-}
+  background-color: #45758C;
 
-.signup-button:focus {
-	outline: none;
+ }
 }
 
 .signup-input-fullname{
