--- a/client/src/components/Collection/OpenPacks/NewCard/NewCard.css
+++ b/client/src/components/Collection/OpenPacks/NewCard/NewCard.css
@@ -15,6 +15,9 @@
   z-index: 10;
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
+  border: 1px solid rgba(0, 0, 0, 0.24);
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
 }
 
 .charCard .charCard-info-container {
