--- a/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
+++ b/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
@@ -13,6 +13,8 @@
     &:hover{
         z-index: 10;
         transform: scale(1.3);
+        border: 1px solid rgba(0, 0, 0, 0.24);
+        transition: .5s ease;
     }
 
 
