--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,8 +1,8 @@
 .user-identification {
-  position: absolute;
+  position: fixed;
   opacity: 100;
   color: #45758C;
-  z-index: 15;
+  z-index: 150000;
   margin-left: 83.5%;
   cursor: default;
 }
