--- a/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
+++ b/client/src/components/Collection/OpenPacks/NewCard/NewCard.scss
@@ -4,15 +4,14 @@
     perspective: 600px;
     cursor: pointer;
     background-color: rgb(109, 109, 109);
-    width: 10.5vw;
-    height: 27vh;
+    width: 12.075vw;
+    height: 31.05vh;
     border-radius: 5px;
-
-
+    transition: .5s ease;
 
     &:hover{
         z-index: 10;
-        transform: scale(1.3);
+        transform: scale(1.15);
         border: 1px solid rgba(0, 0, 0, 0.24);
         transition: .5s ease;
     }
