--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.scss
@@ -7,10 +7,13 @@
     width: 18vw;
     height: 43vh;
     border-radius: 10px;
+    transition: .5s ease;
 
     &:hover{
         z-index: 10;
         transform: scale(1.1);
+        transition: .5s ease;
+
     }
 
     
