--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -6,6 +6,7 @@
 }
 
 .yourCards-container {
+    margin-top: 5%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -19,15 +20,13 @@
     display: flex;
     flex-direction: column;
     flex-basis: 50%;
-    position: fixed;
+    position: absolute;
     overflow: hidden;
-    // cursor: pointer;
-    display: flex;
-    flex-direction: column;
     cursor: pointer;
-    margin-top: -307%;
-    // margin-top: -57%;
-
+    // margin-top: -307%;
+    z-index: 99;
+    top: -.5vh;
+    left: 0vw;
 
     h3 {
         text-transform: uppercase;
