--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -19,14 +19,6 @@
         transition: .5s ease;
     }
 
-    .charCard-id {
-        align-self: flex-end;
-        margin-right: 2.5%;
-        font-size: smaller;
-        margin-top: 0.75%;
-        margin-bottom: 0.75%;
-    }
-
     .charCard-yc-info-container {
         display: flex;
         flex-direction: column;
@@ -36,15 +28,40 @@
 
     .charCard-image {
         // margin-top: 5%;
-        // height: 18.55vh;
+        height: 21vh;
+        width: 10.65vw;
         // height: 17vh;
         // max-width:230px;
-        max-height: 17vh;
+        max-height: 21vh;
+        max-width: 10.65vw;
         // width: auto;
         // height: auto;
         // border-radius: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
         margin-bottom: 5%;
 
+    }
+
+    .charCard-text{
+        align-self: flex-start;
+        margin-left: 2.5%;
+        font-size: smaller;
+
+    }
+
+    .charCard-rarity {
+        // margin-right: 2.5%;
+        font-size: smaller;
+        margin-top: 2%;
+        margin-bottom: 0.75%;
+    }
+
+    .charCard-id {
+        // margin-right: 2.5%;
+        font-size: smaller;
+        margin-top: 2%;
+        margin-bottom: 0.75%;
     }
 
 }
