updated charcard text styling

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -53,14 +53,20 @@
   font-size: smaller;
 }
 
-.charCard-yc .charCard-rarity {
+.charCard-yc .charCard-name {
   font-size: smaller;
   margin-top: 2%;
   margin-bottom: 0.75%;
 }
 
+.charCard-yc .charCard-rarity {
+  font-size: x-small;
+  margin-top: 2%;
+  margin-bottom: 0.75%;
+}
+
 .charCard-yc .charCard-id {
-  font-size: smaller;
+  font-size: x-small;
   margin-top: 2%;
   margin-bottom: 0.75%;
 }
