--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -50,16 +50,23 @@
 
     }
 
-    .charCard-rarity {
+    .charCard-name {
         // margin-right: 2.5%;
         font-size: smaller;
         margin-top: 2%;
         margin-bottom: 0.75%;
     }
 
+    .charCard-rarity {
+        // margin-right: 2.5%;
+        font-size: x-small;
+        margin-top: 2%;
+        margin-bottom: 0.75%;
+    }
+
     .charCard-id {
         // margin-right: 2.5%;
-        font-size: smaller;
+        font-size: x-small;
         margin-top: 2%;
         margin-bottom: 0.75%;
     }
